--- a/index0.html
+++ b/index0.html
@@ -9,12 +9,12 @@
     <title>Тестовое задание | Палкин Юрий</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main0.css">
     <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
     <link rel="shortcut icon" href="rambler.ico">
     <script src="js/jquery-1.9.1.js"></script>
     <script src="js/jquery.text-overflow.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main0.js"></script>
 </head>
 <body>
     <div class="topline">
@@ -35,24 +35,25 @@
     </div>
 
     <div class="sizefix">
-          <nav class="cats">
-            <a href="/rambler/" class="cats__item cats__item_active">Спорт</a>
+        <nav class="cats">
+            <a href="/rambler/" class="cats__item">Спорт</a>
             <a href="/rambler/" class="cats__item">Авто и мото</a>
+            <a href="/rambler/" class="cats__item">Мото и авто</a>
             <a href="/rambler/" class="cats__item">Путешествия</a>
             <a href="/rambler/" class="cats__item">Кино и ТВ</a>
+            <a href="/rambler/" class="cats__item">ТВ и кино</a>
             <a href="/rambler/" class="cats__item">Музыка</a>
             <a href="/rambler/" class="cats__item">Еда</a>
             <a href="/rambler/" class="cats__item">Светская хроника</a>
             <a href="/rambler/" class="cats__item">Мода и красота</a>
+            <a href="/rambler/" class="cats__item">Красота и мода</a>
             <a href="/rambler/" class="cats__item">Дом и быт</a>
+            <a href="/rambler/" class="cats__item">Быт и дом</a>
             <a href="/rambler/" class="cats__item">Наука и техника</a>
-            <a href="/rambler/" class="cats__item">Ещё наука и техника</a>
             <a href="/rambler/" class="cats__item">Техника и наука</a>
-            <a href="/rambler/" class="cats__item">Добрый проект</a>
             <span class="cats__wrap">
                 <span class="cats__button">Ещё<i class="cats__icon"></i></span>
-                <span class="cats__list">
-                </span>
+                <span class="cats__list"></span>
             </span>
         </nav>
     </div>
